[package]
name = "project1"
version = "0.1.0"
edition = "2021"

target = "/project1/src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
buttons = "0.5.0"
glutin = "0.30.10"
pistoncore-glutin_window = "0.71.0"
winit = "0.28.6"
